--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 							Software Engineer<br class="mobile-hide" />
 							<!-- site template by <a href="http://html5up.net" class="nobr">HTML5 UP</a> -->
 						</p>
-						<p class="sytle1">enjoying the finer things in life, such as coffee, cars and computers.</p>
+						<p class="sytle1">enjoying coffee, cars and computers.</p>
 						<!-- <ul class="actions">
 							<li><a href="#" class="button style3 large">Want to know more?</a></li>
 						</ul> -->
