updates to content

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								<!-- <li><a href="no-sidebar.html">Hobbies</a></li> -->
 								<li><a href="index.html#main">Capabilities</a></li>
 								<li><a href="index.html#highlights">Highlighted Work</a></li>
-								<li><a href="index.html#footer">Contact Me</a></li>
+								<li><a href="index.html#footer">Hit Me Up</a></li>
 							</ul>
 						</nav>
 
@@ -68,7 +68,7 @@
 							Software Engineer<br class="mobile-hide" />
 							<!-- site template by <a href="http://html5up.net" class="nobr">HTML5 UP</a> -->
 						</p>
-						<p class="sytle1">enjoying coffee, cars and computers.</p>
+						<p class="sytle1">enjoying coffee, cars and computers</p>
 						<!-- <ul class="actions">
 							<li><a href="#" class="button style3 large">Want to know more?</a></li>
 						</ul> -->
@@ -132,19 +132,19 @@
 										<div class="col-6 col-12-medium">
 											<section>
 												<h3 class="icon solid fa-user">Empathy</h3>
-												<p>People need solutions created by people, it's always about understanding others deeply, allowing the ability to deliver <i>the</i> solution not <i>a</i> solution.</p>
+												<p>People need solutions created by people, it's always about understanding others deeply, allowing the ability to deliver <iu>the</iu> solution not <iu>a</iu> solution.</p>
 											</section>
 										</div>
 										<div class="col-6 col-12-medium">
 											<section>
 												<h3 class="icon solid fa-users">Collaboration</h3>
-												<p>Cross-functional teams provide a extremely high collaborative environment while providing unique perspectives.</p>
+												<p>Cross-functional teams provide an extremely high collaborative environment while providing unique perspectives.</p>
 											</section>
 										</div>
 										<div class="col-6 col-12-medium">
 											<section>
 												<h3 class="icon solid fa-question">Fearless Problem Solving</h3>
-												<p>Willing to accept challenges with confidence, that other may turn away.</p>
+												<p>Willing to accept challenges with confidence, that others may turn away.</p>
 											</section>
 										</div>
 										<div class="col-6 col-12-medium">
