--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 										<div class="col-6 col-12-medium">
 											<section>
 												<h3 class="icon solid fa-user">Empathy</h3>
-												<p>People need solutions created by people, it's always about understanding others deeply, allowing the ability to deliver <iu>the</iu> solution not <iu>a</iu> solution.</p>
+												<p>People need solutions created by people, it's always about understanding others deeply, allowing the ability to deliver <i><u>the</u></i> solution not <i><u>a</u></i> solution.</p>
 											</section>
 										</div>
 										<div class="col-6 col-12-medium">
