--- a/terminal.html
+++ b/terminal.html
@@ -7,10 +7,10 @@
     <title>Terminal</title>
 
     <!-- Theme style -->
-    <link rel="stylesheet" href="terminal-style.css">
+    <link rel="stylesheet" href="/wwwroot/css/terminal-style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.1/typed.min.js"></script>
-    <script src="terminal-site.js"></script>
+    <script src="/wwwroot/js/terminal-site.js"></script>
     
 </head>
 <body class="back-row-toggle splat-toggle">
