remove some comments

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html>
-	<head {% raw %}{% seo %}{% endraw %}>
+	<head>
 		<title>Austin Coffman | Software Engineer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -23,29 +23,6 @@
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
-								<!-- <li>
-									<a href="#">Dropdown</a>
-									<ul>
-										<li><a href="#">Lorem ipsum</a></li>
-										<li><a href="#">Magna veroeros</a></li>
-										<li><a href="#">Etiam nisl</a></li>
-										<li>
-											<a href="#">Sed consequat</a>
-											<ul>
-												<li><a href="#">Lorem dolor</a></li>
-												<li><a href="#">Amet consequat</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam nisl</a></li>
-												<li><a href="#">Sed feugiat</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Nisl tempus</a></li>
-									</ul>
-								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li> -->
-
-								<!-- <li><a href="no-sidebar.html">Hobbies</a></li> -->
 								<li><a href="index.html#main">Capabilities</a></li>
 								<li><a href="index.html#highlights">Highlighted Work</a></li>
 								<li><a href="index.html#footer">Hit Me Up</a></li>
@@ -56,17 +33,11 @@
 
 			<!-- Intro -->
 				<section id="intro" class="wrapper style1">
-					<!-- <div class="title">whoami</div> -->
 					<div class="container">
-						<!-- <p class="style1">So in case you were wondering what this is all about ...</p> -->
 						<p class="style2">
 							Software Engineer<br class="mobile-hide" />
-							<!-- site template by <a href="http://html5up.net" class="nobr">HTML5 UP</a> -->
 						</p>
 						<p class="sytle1">enjoying coffee, cars and computers</p>
-						<!-- <ul class="actions">
-							<li><a href="#" class="button style3 large">Want to know more?</a></li>
-						</ul> -->
 					</div>
 					<br>
 				</section>
@@ -82,10 +53,6 @@
 									<h2>Technologies</h2>
 									<p>build it right ONCE, not twice..</p>
 								</header>
-								<!-- Image -->
-							<!-- <a href="#" class="image featured">
-								<img src="images/circuit.jpg" alt="" />
-							</a> -->
 								<div class="feature-list">
 									<div class="row">
 										<div class="col-6 col-12-medium">
