making content updates

--- a/index2.html
+++ b/index2.html
@@ -41,11 +41,9 @@
         <img src="images/headshot.jpeg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Austin Coffman</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="mailto:austincartercoffman@gmail.com"><i class="bx bx-envelope"></i></a>
+          <a href="https://www.linkedin.com/in/austin-coffman-82b4a495/"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/austin-coffman"><i class="bx bxl-github"></i></a>
         </div>
       </div>
 
@@ -53,9 +51,10 @@
         <ul>
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href="#technologies" class="nav-link scrollto"><i class="bx bx-terminal"></i> <span>Technologies</span></a></li>
+          <li><a href="#soft-skills" class="nav-link scrollto"><i class="bx bxs-conversation"></i> <span>Soft Skills</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -66,7 +65,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Austin Coffman</h1>
-      <p>I'm a <span class="typed" data-typed-items="Developer, Freelancer, Pizza Enthusiast"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Developer, Freelancer, Pizza Enthusiast, Human Being"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -78,7 +77,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Software Engineer enjoying coffee, cars and computers.</p>
         </div>
 
         <div class="row">
@@ -86,12 +85,10 @@
             <img src="images/headshot.jpeg" class="img-fluid" alt="">
           </div> -->
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Software Engineer</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Build it right once, not wrong twice.
             </p>
-            <div class="row">
+            <!-- <div class="row">
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
@@ -110,7 +107,7 @@
             <p>
               Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
               Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
-            </p>
+            </p> -->
           </div>
         </div>
 
@@ -166,7 +163,7 @@
     </section>End Facts Section -->
 
     <!-- ======= Skills Section ======= -->
-    <section id="skills" class="services section-bg-light">
+    <section id="technologies" class="services section-bg-light">
       <div class="container">
 
         <div class="section-title">
@@ -179,32 +176,32 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-windows"></i></div>
-            <h4 class="title"><a href="">.NET</a></h4>
+            <h4 class="title">.NET</h4>
             <p class="description">5+ Years of .NET Experience, building APIs that are easy to understand and use.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
-            <div class="icon"><i class="bi bi-windows"></i></div>
-            <h4 class="title"><a href="">JavaScript</a></h4>
+            <div class="icon"><i class="bx bxl-javascript"></i></div>
+            <h4 class="title">JavaScript</h4>
             <p class="description">Functional applications with many variations of JS Frameworks implemented, also event loop go brrr.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon"><i class="bi bi-card-checklist"></i></div>
-            <h4 class="title"><a href="">PostgreSQL</a></h4>
+            <div class="icon"><i class="bx bxl-postgresql"></i></div>
+            <h4 class="title">PostgreSQL</h4>
             <p class="description">Elegant yet performant relational databases, heavy integration with Entity Framework, code first migrations.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon"><i class="bi bi-bar-chart"></i></div>
-            <h4 class="title"><a href="">Docker</a></h4>
+            <div class="icon"><i class="bx bxl-docker"></i></div>
+            <h4 class="title">Docker</h4>
             <p class="description">Containerization of many apps, docker-compose, 3rd party integrations.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon"><i class="bi bi-binoculars"></i></div>
-            <h4 class="title"><a href="">Amazon Web Services</a></h4>
+            <div class="icon"><i class="bx bxl-aws"></i></div>
+            <h4 class="title">Amazon Web Services</h4>
             <p class="description">Developed apps using EC2, RDS, ERC, ECS, S3, and many more.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon"><i class="bi bi-binoculars"></i></div>
-            <h4 class="title"><a href="">GraphQL</a></h4>
+            <div class="icon"><i class="bx bx-network-chart"></i></div>
+            <h4 class="title">GraphQL</h4>
             <p class="description">Scalable, dynamic data queries, both from a client side and server side. Large implementations across multiple data sources.</p>
           </div>
         </div>
@@ -213,36 +210,43 @@
     </section><!-- End Skills Section -->
 
     <!-- ======= Skills Section ======= -->
-    <section id="skills" class="services section-bg-light">
+    <section id="soft-skills" class="services section-bg-light">
       <div class="container">
 
         <div class="section-title">
           <h2>Soft Skills</h2>
           <p>Technical expertise without soft skills, is much like a pizza without sauce.</p>
         </div>
-
-
-
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
-            <div class="icon"><i class="bi bi-windows"></i></div>
-            <h4 class="title"><a href="">Empathy</a></h4>
+            <div class="icon"><i class="bx bxs-user"></i></div>
+            <h4 class="title">Empathy</h4>
             <p class="description">People need solutions created by people, it's always about understanding others deeply, allowing the ability to deliver <u><i>the</i></u> solution not <u><i>a</i></u> solution.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon"><i class="bi bi-card-checklist"></i></div>
-            <h4 class="title"><a href="">Collaboration</a></h4>
+            <div class="icon"><i class="bx bxs-group"></i></div>
+            <h4 class="title">Collaboration</h4>
             <p class="description">Cross-functional teams provide an extremely high collaborative environment while providing unique perspectives.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon"><i class="bi bi-bar-chart"></i></div>
-            <h4 class="title"><a href="">Fearless Problem Solving</a></h4>
+            <div class="icon"><i class="bx bx-question-mark"></i></div>
+            <h4 class="title">Fearless Problem Solving</h4>
             <p class="description">Willing to accept challenges with confidence, that others may turn away.</p>
           </div>
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+            <div class="icon"><i class="bx bx-chat"></i></div>
+            <h4 class="title">Approachability</h4>
+            <p class="description">Understanding that people have different levels of knowledge any may need topics discussed at different levels.</p>
+          </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon"><i class="bi bi-binoculars"></i></div>
-            <h4 class="title"><a href="">Time Management</a></h4>
+            <div class="icon"><i class="bx bx-timer"></i></div>
+            <h4 class="title">Time Management</h4>
             <p class="description">You cannot bake a 30 minute cake in 5 minutes, but first you need to know that cake takes 30 minutes.</p>
+          </div>
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
+            <div class="icon"><i class="bx bx-brain"></i></div>
+            <h4 class="title">Open Minded</h4>
+            <p class="description">If I was always right, then I likely wouldn't have this site, as I would be retired already. Always willing to accept new ideas and concepts.</p>
           </div>
         </div>
 
@@ -250,30 +254,25 @@
     </section><!-- End Skills Section -->
 
     <!-- ======= Resume Section ======= -->
-    <section id="resume" class="resume section-bg-light">
+    <section href="resume" id="resume" class="resume section-bg-light">
       <div class="container">
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          
         </div>
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
-              <h4>Alex Smith</h4>
+              <h4>Austin Coffman</h4>
               <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-              <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
-              </ul>
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
+              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
               <h5>2015 - 2016</h5>
               <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
               <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
@@ -433,7 +432,7 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Services Section ======= -->
-    <section id="services" class="services section-bg-light">
+    <!-- <section id="services" class="services section-bg-light">
       <div class="container">
 
         <div class="section-title">
@@ -475,10 +474,10 @@
         </div>
 
       </div>
-    </section><!-- End Services Section -->
+    </section>End Services Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials section-bg-light">
+    <!-- <section id="testimonials" class="testimonials section-bg-light">
       <div class="container">
 
         <div class="section-title">
@@ -500,7 +499,7 @@
                 <h3>Saul Goodman</h3>
                 <h4>Ceo &amp; Founder</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
@@ -513,7 +512,7 @@
                 <h3>Sara Wilsson</h3>
                 <h4>Designer</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
@@ -526,7 +525,7 @@
                 <h3>Jena Karlis</h3>
                 <h4>Store Owner</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
@@ -539,7 +538,7 @@
                 <h3>Matt Brandon</h3>
                 <h4>Freelancer</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="400">
@@ -552,14 +551,15 @@
                 <h3>John Larson</h3>
                 <h4>Entrepreneur</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
           </div>
           <div class="swiper-pagination"></div>
         </div>
 
       </div>
-    </section><!-- End Testimonials Section -->
+    </section> -->
+    <!-- End Testimonials Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact section-bg-light">
@@ -637,14 +637,14 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
+        <!-- &copy; Copyright <strong><span>Austin Coffman</span></strong> -->
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
       </div>
     </div>
   </footer><!-- End  Footer -->
