fixing image name

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-professional">
             <div class="portfolio-wrap">
               <div>
-                <img src="images/eseat.JPG" class="img-fluid" alt="">
+                <img src="images/eseat.jpg" class="img-fluid" alt="">
               </div>
               <div class="portfolio-links">
                 <a href="portfolio-details.html" title="More Details">Details</a>
@@ -591,7 +591,7 @@
   <!-- <footer id="footer">
     <div class="container">
       <div class="copyright">
-        <!-- &copy; Copyright <strong><span>Austin Coffman</span></strong> -->
+        &copy; Copyright <strong><span>Austin Coffman</span></strong> -->
       <!-- </div>
       <div class="credits"> -->
         <!-- All the links in the footer should remain intact. -->
