--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                 <img src="images/amaro/amaro-0.JPG" class="img-fluid" alt="">
               </div>
               <div class="portfolio-links">
-                <a href="portfolio-details.html" title="More Details">Details</i></a>
+                <a href="amaro-details.html" title="More Details">AMARO</i></a>
               </div>
             </div>
           </div>
@@ -383,10 +383,10 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-professional">
             <div class="portfolio-wrap">
               <div>
-                <img src="images/eseat.jpg" class="img-fluid" alt="">
+                <img src="images/eseat/eseat-0.jpg" class="img-fluid" alt="">
               </div>
               <div class="portfolio-links">
-                <a href="portfolio-details.html" title="More Details">Details</a>
+                <a href="eseat-details.html" title="More Details">ESEAT</a>
               </div>
             </div>
           </div>
@@ -394,10 +394,10 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-personal">
             <div class="portfolio-wrap">
               <div>
-                <img src="images/terminal.jpg" class="img-fluid" alt="">
+                <img src="images/terminal/terminal-0.jpg" class="img-fluid" alt="">
               </div>
               <div class="portfolio-links">
-                <a href="terminal.html" title="More Details">Details</a>
+                <a href="terminal-details.html" title="More Details">Terminal in CSS</a>
               </div>
             </div>
           </div>
